exercise-service-modules-endpoint.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exercise-service
  namespace: learnflow
spec:
  template:
    spec:
      containers:
      - name: exercise
        command:
        - sh
        - -c
        - |
          [...]
        ports:
        - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: exercise-service
  namespace: learnflow
spec:
  selector:
    app: exercise-service
  ports:
  - port: 8004
    targetPort: 8004
  type: ClusterIP
