nodeport-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: learnflow-frontend-nodeport
  namespace: learnflow
spec:
  type: NodePort
  selector:
    app: learnflow-frontend
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: triage-service-nodeport
  namespace: learnflow
spec:
  type: NodePort
  selector:
    app: triage-service
  ports:
  - port: 8001
    targetPort: 8001
    nodePort: 30801
---
apiVersion: v1
kind: Service
metadata:
  name: concepts-service-nodeport
  namespace: learnflow
spec:
  type: NodePort
  selector:
    app: concepts-service
  ports:
  - port: 8002
    targetPort: 8002
    nodePort: 30802
